package api

import (
	"context"
	"io"
	pb "kenmec/ha/jimmy/protoGen"
	"log"
	"net"
	"sync"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/keepalive"
)

type HAToOtherServer struct {
	pb.UnimplementedHASyncServiceServer

	clients     map[string]*ClientConnection
	clientsLock sync.RWMutex

	//ç”¨é¡ä¼¼callbackçš„æ–¹å¼ å¯ä»¥åœ¨å…¶ä»–åœ°æ–¹å‘¼å«ç”¨
	OnReceiveMsg func(msg *pb.StatusRequest)
}

// ClientConnection represents a connected client
type ClientConnection struct {
	stream     pb.HASyncService_ExchangeStatusServer
	ctx        context.Context
	cancelFunc context.CancelFunc
	lastHB     time.Time
	mu         sync.RWMutex
}

func NewHAToOtherServer() *HAToOtherServer {
	return &HAToOtherServer{
		clients: make(map[string]*ClientConnection),
	}
}

func (s *HAToOtherServer) ListenServer(port string) {
	lis, err := net.Listen("tcp", ":"+port)
	if err != nil {
		log.Fatalf("âŒ ç›£è½å¤±æ•—: %v", err)
	}

	kaep := keepalive.EnforcementPolicy{
		MinTime:             5 * time.Second,
		PermitWithoutStream: true,
	}

	kasp := keepalive.ServerParameters{
		Time:    10 * time.Second,
		Timeout: 3 * time.Second,
	}

	grpcServer := grpc.NewServer(
		grpc.KeepaliveEnforcementPolicy(kaep),
		grpc.KeepaliveParams(kasp),
	)

	pb.RegisterHASyncServiceServer(grpcServer, s)

	log.Printf("ğŸš€ gRPC ä¼ºæœå™¨å•Ÿå‹•æ–¼ :%s", port)

	if err := grpcServer.Serve(lis); err != nil {
		log.Fatalf("âŒ æœå‹™å•Ÿå‹•å¤±æ•—: %v", err)
	}
}

// âœ… Implement the correct method name from proto
func (s *HAToOtherServer) ExchangeStatus(stream pb.HASyncService_ExchangeStatusServer) error {
	ctx, cancel := context.WithCancel(stream.Context())
	defer cancel()

	clientID := generateClientID()

	client := &ClientConnection{
		stream:     stream,
		ctx:        ctx,
		cancelFunc: cancel,
		lastHB:     time.Now(),
	}

	s.clientsLock.Lock()
	s.clients[clientID] = client
	s.clientsLock.Unlock()

	log.Printf("âœ… æ–°å®¢æˆ¶ç«¯é€£ç·š: %s (ç¸½æ•¸: %d)", clientID, len(s.clients))

	defer func() {
		s.clientsLock.Lock()
		delete(s.clients, clientID)
		clientCount := len(s.clients)
		s.clientsLock.Unlock()
		log.Printf("âŒ å®¢æˆ¶ç«¯æ–·ç·š: %s (å‰©é¤˜: %d)", clientID, clientCount)
	}()

	// Receive messages loop
	for {
		msg, err := stream.Recv()
		if err != nil {
			if err == io.EOF {
				log.Printf("ğŸ“­ å®¢æˆ¶ç«¯ %s æ­£å¸¸é—œé–‰é€£ç·š", clientID)
				return nil
			}
			log.Printf("âŒ å®¢æˆ¶ç«¯ %s æ¥æ”¶éŒ¯èª¤: %v", clientID, err)
			return err
		}
		log.Printf("ğŸ“¨ æ”¶åˆ°è¨Šæ¯ä¾†è‡ªå¦ä¸€å° HA: %+v", msg)
		s.handleClientMessage(msg)
	}
}

// handleClientMessage processes messages from client
func (s *HAToOtherServer) handleClientMessage(msg *pb.StatusRequest) {
	s.OnReceiveMsg(msg)
}

func (s *HAToOtherServer) BroadcastMessage(msg *pb.StatusResponse) {
	s.clientsLock.RLock()
	defer s.clientsLock.RUnlock()

	for clientID, client := range s.clients {
		if err := client.stream.Send(msg); err != nil {
			log.Printf("âŒ å»£æ’­è‡³å®¢æˆ¶ç«¯ %s å¤±æ•—: %v", clientID, err)
		}
	}
}

func (s *HAToOtherServer) SendToClient(clientID string, msg *pb.StatusResponse) error {
	s.clientsLock.RLock()
	client, exists := s.clients[clientID]
	s.clientsLock.RUnlock()

	if !exists {
		return io.EOF
	}

	return client.stream.Send(msg)
}

func generateClientID() string {
	return time.Now().Format("20060102150405.000000")
}
